.rsw/rsw.err
[INFO]: 🎯  Checking for the Wasm target...
[INFO]: 🌀  Compiling to Wasm...
warning: Found `debug_assertions` in `target.'cfg(...)'.dependencies`. This value is not supported for selecting dependencies and will not work as expected. To learn more visit https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
   Compiling epicycloids v0.0.1 (/home/alex/Documents/GithubRepos/portfolio/src/lib/crates/epicycloids)
error[E0762]: unterminated character literal
 --> src/geometry.rs:6:66
  |
6 | pub const NO_VERTICES_ERROR: &str = 'Polygon should have vertices';
  |                                                                  ^^
  |
help: if you meant to write a string literal, use double quotes
  |
6 | pub const NO_VERTICES_ERROR: &str = "Polygon should have vertices";
  |                                     ~                            ~

For more information about this error, try `rustc --explain E0762`.
error: could not compile `epicycloids` (lib) due to 1 previous error
Error: Compiling your crate to WebAssembly failed
Caused by: Compiling your crate to WebAssembly failed
Caused by: failed to execute `cargo build`: exited with exit status: 101
  full command: cd "src/lib/crates/epicycloids" && "cargo" "build" "--lib" "--target" "wasm32-unknown-unknown"
